hey, you can fix the overlapping elements on the team page for mobile by

--- a/public/output.css
+++ b/public/output.css
@@ -1167,6 +1167,11 @@ h1,h2,h3,h4,h5,h6 {
   width: 100%;
 }
 
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1470,6 +1475,10 @@ h1,h2,h3,h4,h5,h6 {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .whitespace-nowrap {
@@ -1782,6 +1791,10 @@ h1,h2,h3,h4,h5,h6 {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pb-3 {
@@ -2242,6 +2255,15 @@ h1,h2,h3,h4,h5,h6 {
   100% {
     background-position: 0% 50%;
   }
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .file\:border-0::file-selector-button {
@@ -3007,6 +3029,10 @@ h1,h2,h3,h4,h5,h6 {
     min-height: 120px;
   }
 
+  .sm\:w-auto {
+    width: auto;
+  }
+
   .sm\:max-w-sm {
     max-width: 24rem;
   }
@@ -3017,10 +3043,6 @@ h1,h2,h3,h4,h5,h6 {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
